# serial-input-monitor

./: .clang-format  .gitignore  INSTALL.md  README.md  config.ini  config.ini.example  install_helper.py  pyproject.toml  requirements.txt  setup.py  start.bat
arduino/: SerialInputMonitor.cpp  SerialInputMonitor.h
arduino/examples/example_auto_demo/: example_auto_demo.ino
arduino/examples/example_basic_usage/: example_basic_usage.ino
arduino/examples/example_comments_and_commands/: example_comments_and_commands.ino
arduino/examples/example_minimal/: example_minimal.ino
arduino/examples/example_simple_test/: example_simple_test.ino
arduino/examples/example_using_library/: example_using_library.ino
arduino/examples/example_when_library_needed/: example_when_library_needed.ino
arduino/examples/test_intellisense/: test_intellisense.ino
src/: key_mappings.py  main.py
src/ui/: main_ui.py  main_ui.ui
src/ui/themes/: default.qss
